# Chatbot-Avatar3D-android

./: .gitignore  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/a2bs/src/: audio_to_flame_blend_shape.cpp  gs_body_converter.cpp
app/src/main/cpp/common/: mnn_backend.cpp  mnn_backend.hpp
app/src/main/cpp/llm_droid/: llm_mnn_jni.cpp
app/src/main/cpp/tts/: CMakeLists.txt
app/src/main/cpp/tts/include/: mnn_tts_sdk.hpp
app/src/main/cpp/tts/include/piper/: mnn_piper_tts_impl.hpp
app/src/main/cpp/tts/src/: mnn_tts_config.cpp  mnn_tts_sdk.cpp
app/src/main/cpp/tts/src/piper/: mnn_piper_tts_impl.cpp
app/src/main/cpp/tts_droid/: tts_service.cpp  tts_service.hpp  tts_service_jni.cpp
app/src/main/java/com/k2fsa/sherpa/onnx/: SherpaOnnxTts.kt
app/src/main/java/com/taobao/meta/avatar/: MHConfig.kt  MainActivity.kt  MainView.kt  NativeLibraries.kt
app/src/main/java/com/taobao/meta/avatar/a2bs/: AudioBlendShape.kt  AudioBlendShapePlayer.kt
app/src/main/java/com/taobao/meta/avatar/asr/: AndroidSttService.kt
app/src/main/java/com/taobao/meta/avatar/audio/: AudioChunksPlayer.kt
app/src/main/java/com/taobao/meta/avatar/debug/: DebugModule.kt
app/src/main/java/com/taobao/meta/avatar/download/: DownloadModule.kt
app/src/main/java/com/taobao/meta/avatar/llm/: FaqService.kt  LlmEngine.kt  LlmService.kt
app/src/main/java/com/taobao/meta/avatar/llm/litert/: LiteRtLlmEngine.kt
app/src/main/java/com/taobao/meta/avatar/rag/: RagEngine.kt
app/src/main/java/com/taobao/meta/avatar/rag/fasttext/: FastTextRagEngine.kt
app/src/main/java/com/taobao/meta/avatar/record/: StoragePermission.kt
app/src/main/java/com/taobao/meta/avatar/settings/: MainSettings.kt  MainSettingsFragment.kt
app/src/main/java/com/taobao/meta/avatar/tts/: PiperTextPreProcessor.kt  PiperTtsEngine.kt  TtsService.kt
app/src/main/java/com/taobao/meta/avatar/utils/: AppUtils.kt
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: main_settings_prefs.xml
model_downloader/: build.gradle
scripts/: prepare_piper_vi.sh
